# smart-log-analyzer

./: README.md
backend/: .env  Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/logs/: route.ts
frontend/components/: AIanalyse.tsx  AnomalyList.tsx  FilterPanel.tsx  LogCharts.tsx  LogTable.tsx  LogUploader.tsx  LogViewer.tsx  PatternList.tsx
frontend/components/ui/: card.tsx  layout.tsx  skeleton.tsx
frontend/lib/: utils.ts
frontend/types/: log.ts
