[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
env_logger = "0.10"
log = "0.4"
gemini_client_rs = "0.2.0"
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }